# ph-fhsis-data-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  dashboard-requirement.yml  documentation-update.yml  mapping-crosswalk.yml  source-onboarding.yml  transform-implementation.yml
.github/workflows/: ci.yml  docs-links.yml
docs/: README.md  domain-glossary.md  problem-statement.md  project-charter.md  scope.md
docs/adr/: ADR-001-monorepo-vs-multi-repo.md  ADR-002-observation-centric-canonical-model.md  ADR-003-public-aggregate-default.md  ADR-004-bronze-silver-gold-layering.md  ADR-005-versioned-geography-registry.md  ADR-006-indicator-versioning-and-comparability.md
docs/governance/: README.md  issues-backlog.md  labels.md  milestones.md
docs/source-inventory/: README.md
fhsis-reusable-database/: README.md
fhsis-reusable-database/docs/: README.md  agent-playbook.md
fhsis-reusable-database/examples/: README.md
fhsis-reusable-database/extract/: README.md
fhsis-reusable-database/raw/: README.md
fhsis-reusable-database/registry/: README.md
fhsis-reusable-database/schemas/: fhsis_schema_bundle.json
fhsis-reusable-database/templates/: assumptions_log.md  comparability_assessment.md  crosswalk_table.csv  data_quality_rules_register.yaml  denominator_formula_note_register.csv  deprecated_replaced_indicator_register.csv  (+2 more)
fhsis-visualization/: README.md
(+22 files in other folders)
